[package]
name = "tupm"
version = "0.1.0"
authors = ["David Simmons <simmons@davidsimmons.com>"]
license = "MIT/Apache-2.0"
homepage = "https://cafbit.com/post/tupm/"
repository = "https://github.com/simmons/tupm"
keywords = ["password", "UPM", "UI"]
categories = ["command-line-utilities"]
description = "Terminal Universal Password Manager"
readme = "README.md"

# The "upm" library can be used independently from the tupm application.
# It provides the core support for reading/writing/syncing UPM
# databases.
[lib]
name = "upm"
path = "src/upm/lib.rs"

[features]
# No features by default
default = []
# If this feature is enabled, it adds a --test option to load
# the sampledb.upm with a built-in password.  This is a convenience for
# development.
test_database = []

[dependencies]
dirs = "1.0"
openssl = "0.10.16"
libc = "0.2"
openssl-sys = "0.9.40"
cursive = "0.10"
clap = "2.25.0"
rpassword = "0.4.0"
chrono = "0.4"
rand = "0.3.15"
time = "0.1.38"
base64 = "0.7.0"
reqwest = "0.9"

# Crates used for testing
[dev-dependencies]
matches = "0.1.6"
